basics/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: server
        image: httpd:2.4
        ports:
        - containerPort: 80
        volumeMounts:
          - name: secret-volume
            mountPath: /etc/config
            readOnly: true
      volumes:
        - name: secret-volume
          secret:
            secretName: web
            items:
            - key: password
              path: password
