basics/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: web
          servicePort: 80
        path: /web/(.*)
      - backend:
      #    serviceName: metabase
      #    servicePort: 3000
      #  path: /metabase/(.*)
      #- backend:
      #    serviceName: elasticsearch-master
      #    servicePort: 9200
      #  path: /elasticsearch/(.*)
      #- backend:
      #    serviceName: kibana-kibana
      #    servicePort: 5601
      #  path: /kibana/(.*)
      #- backend:
      #    serviceName: fluent-bit-metrics
      #    servicePort: 2020
      #  path: /fluent-bit-metrics/(.*)
      #- backend:
      #    serviceName: kube-prometheus-stack-prometheus
      #    servicePort: 9090
      #  path: /prometheus/(.*)
      #- backend:
      #    serviceName: kube-prometheus-stack-grafana
      #    servicePort: 80
      #  path: /grafana/(.*)
